--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "prisma:push": "npx prisma db push"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "6.16.2",
+    "bcryptjs": "^3.0.2",
     "cookies-next": "^6.1.0",
     "next": "15.5.4",
+    "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
